fix initial transition creation

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ obj/
 [Rr]elease*/
 _ReSharper*/
 [Tt]est[Rr]esult*
+
+Nemerle.Statechart.Analyser/debug_build.bat
+Nemerle.Statechart.Analyser/opts.txt
