--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,5 @@ obj/
 _ReSharper*/
 [Tt]est[Rr]esult*
 
-Nemerle.Statechart.Analyser/debug_build.bat
-Nemerle.Statechart.Analyser/opts.txt
-fixend.bat
+*.bat
+*.txt
