work on example car

--- a/Tests/FsmTester/CarFsmTest.csproj
+++ b/Tests/FsmTester/CarFsmTest.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Nemerle">
+      <HintPath>C:\Program Files (x86)\Nemerle\Net-4.0\Nemerle.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -63,6 +66,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Car.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -91,6 +95,31 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\car_wheel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\car.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Implementation\Implementation.nproj">
+      <Project>{CAE85846-D56A-4C0B-8964-5419513D4A30}</Project>
+      <Name>Implementation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Lib\Nemerle.Statechart.Lib.nproj">
+      <Project>{F814E097-D32D-4E75-ACDF-97F644F7063C}</Project>
+      <Name>Nemerle.Statechart.Lib</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\state_machines\state_machines.nproj">
+      <Project>{797C8BF4-2021-49C8-8328-DD00A62200B5}</Project>
+      <Name>state_machines</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Car Starting.wav">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
