use pull model messenger, fix NotifyProperyChanged macro incompatibility, refactorings in car example

--- a/Tests/FsmTester/CarFsmTest.csproj
+++ b/Tests/FsmTester/CarFsmTest.csproj
@@ -36,11 +36,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Expression.Samples.Interactivity, Version=1.0.0.0, Culture=neutral, PublicKeyToken=c7dd7e4745814058, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(ProgramFiles)\Microsoft Expression\Blend 3 Samples\WPF\Expression.Samples.Interactivity.dll</HintPath>
+    </Reference>
+    <Reference Include="GalaSoft.MvvmLight.Extras" />
+    <Reference Include="GalaSoft.MvvmLight.WPF4" />
+    <Reference Include="Microsoft.Expression.Interactions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(ProgramFiles)\Microsoft SDKs\Expression\Blend 3\Interactivity\Libraries\WPF\Microsoft.Expression.Interactions.dll</HintPath>
+    </Reference>
     <Reference Include="Nemerle">
-      <HintPath>C:\Program Files (x86)\Nemerle\Net-4.0\Nemerle.dll</HintPath>
+	<SpecificVersion>False</SpecificVersion>
+      <HintPath>$(ProgramFiles)\Nemerle\Net-4.0\Nemerle.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Interactivity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>$(ProgramFiles)\Microsoft SDKs\Expression\Blend 3\Interactivity\Libraries\WPF\System.Windows.Interactivity.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -66,13 +81,14 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Car.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CarViewModel.cs" />
+    <Compile Include="CarViewModelLocator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -97,9 +113,6 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\car_wheel.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\car.png" />
   </ItemGroup>
   <ItemGroup>
@@ -120,6 +133,7 @@
     <Content Include="Car Starting.wav">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Images\car_wheel.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
