fix unused elements warnings

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,11 @@ _ReSharper*/
 *.bat
 *.txt
 
-Tests/testsuite/
+Tests/TestSuite/tests/
+Tests/TestSuite/*.log
+
+Tests/TestSuite/*.bat
 *.eap
 *.ldb
+
 
