--- a/.gitignore
+++ b/.gitignore
@@ -32,15 +32,15 @@ obj/
 _ReSharper*/
 [Tt]est[Rr]esult*
 
-*.bat
 *.txt
 
 Tests/TestSuite/tests/
 Tests/TestSuite/*.log
 
 Tests/test/test/example.n
-Tests/TestSuite/*.bat
 *.eap
 *.ldb
 
 
+
+engings.bat
