--- a/.gitignore
+++ b/.gitignore
@@ -36,11 +36,12 @@ _ReSharper*/
 
 Tests/TestSuite/tests/
 Tests/TestSuite/*.log
-
-Tests/test/test/example.n
 *.eap
 *.ldb
 
 
 
 engings.bat
+
+Tests/test/example.n
+
