--- a/Tests/Calculator/Calculator.csproj
+++ b/Tests/Calculator/Calculator.csproj
@@ -11,7 +11,8 @@
     <RootNamespace>Calculator</RootNamespace>
     <AssemblyName>Calculator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
+    <TargetFrameworkProfile>
+    </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -36,6 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Nemerle">
+      <HintPath>$(Nemerle)\Nemerle.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -44,7 +48,6 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Xaml">
-      <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -86,6 +89,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -93,15 +97,15 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Lib\Nemerle.Statechart.Lib.nproj">
+    <ProjectReference Include="..\..\Lib\Nemerle.Statechart.Lib.nproj">
       <Project>{09006B59-CE96-4AEE-856E-D623484A7EE7}</Project>
       <Name>Nemerle.Statechart.Lib</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\..\Nemerle.Statechart.Runtime\Nemerle.Statechart.Runtime.nproj">
+    <ProjectReference Include="..\..\Nemerle.Statechart.Runtime\Nemerle.Statechart.Runtime.nproj">
       <Project>{CAE85846-D56A-4C0B-8964-5419513D4A30}</Project>
       <Name>Nemerle.Statechart.Runtime</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\state_machines\state_machines.nproj">
+    <ProjectReference Include="..\state_machines\state_machines.nproj">
       <Project>{797C8BF4-2021-49C8-8328-DD00A62200B5}</Project>
       <Name>state_machines</Name>
     </ProjectReference>
