finish codepad example

--- a/Tests/CodePad/CodePad.csproj
+++ b/Tests/CodePad/CodePad.csproj
@@ -102,6 +102,30 @@
       <Name>state_machines</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_back.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_door1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_panel1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_panel3.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_panel2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_light_g.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_door2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\d_light_r.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
