add separators in concurrent state name

--- a/Tests/AlarmClock/AlarmClock.csproj
+++ b/Tests/AlarmClock/AlarmClock.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{05995382-03B1-452F-8319-84CAC2B36DC5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AlarmClock</RootNamespace>
+    <RootNamespace>AlarmClockWindow</RootNamespace>
     <AssemblyName>AlarmClock</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
@@ -91,6 +91,19 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\alarm.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Nemerle.Statechart.Runtime\Nemerle.Statechart.Runtime.nproj">
+      <Project>{CAE85846-D56A-4C0B-8964-5419513D4A30}</Project>
+      <Name>Nemerle.Statechart.Runtime</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\state_machines\state_machines.nproj">
+      <Project>{797C8BF4-2021-49C8-8328-DD00A62200B5}</Project>
+      <Name>state_machines</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
