fix sorting of concurrent states, finish alarm clock example

--- a/Tests/AlarmClock/AlarmClock.csproj
+++ b/Tests/AlarmClock/AlarmClock.csproj
@@ -93,9 +93,6 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\alarm.png" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\Nemerle.Statechart.Runtime\Nemerle.Statechart.Runtime.nproj">
       <Project>{CAE85846-D56A-4C0B-8964-5419513D4A30}</Project>
       <Name>Nemerle.Statechart.Runtime</Name>
@@ -104,6 +101,9 @@
       <Project>{797C8BF4-2021-49C8-8328-DD00A62200B5}</Project>
       <Name>state_machines</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\alarm2.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
