--- a/Tests/Calculator/Calculator.csproj
+++ b/Tests/Calculator/Calculator.csproj
@@ -37,8 +37,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Nemerle">
-      <HintPath>$(Nemerle)\Nemerle.dll</HintPath>
+    <Reference Include="Nemerle, Version=1.2.0.86, Culture=neutral, PublicKeyToken=e080a9c724e2bfcd, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Program Files (x86)\Nemerle\Net-4.0\Nemerle.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
