--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 *.log
 *.gpstate
-*.xml
 *.SCC
 _N_Generated*
 #ignore thumbnails created by windows
@@ -34,7 +33,6 @@ _ReSharper*/
 
 *.txt
 
-Tests/TestSuite/tests/
 Tests/TestSuite/*.log
 *.eap
 *.ldb
@@ -50,3 +48,5 @@ endings.bat
 *.lock
 *.ide
 /.vs/Nemerle.Statechart2017/v15/Server/sqlite3
+
+/Tests/testsuite/tests/
