починена сборка проектов парсера и анализатора, починка локейшонов

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ endings.bat
 /Tests/testsuite/tests/
 
 /Lib/Nemerle.Statechart.Lib.xml
+/Lib/Nemerle.Statechart.Lib.xml
+/Lib/Nemerle.Statechart.Lib.xml
+/Nemerle.Statechart.Analyser/Nemerle.Statechart.Analyser.xml
