--- a/Tests/Calculator/Calculator.csproj
+++ b/Tests/Calculator/Calculator.csproj
@@ -38,7 +38,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Nemerle">
-      <HintPath>$(Nemerle)\Nemerle.dll</HintPath>
+      <HintPath>C:\Program Files\Nemerle\Net-4.0\Nemerle.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
