печать деревьев, в парсере обьявление Guard упрощено для Junction, добавлен QuickGraph

--- a/Tests/AlarmClock/AlarmClock.csproj
+++ b/Tests/AlarmClock/AlarmClock.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Nemerle">
+      <HintPath>C:\Program Files\Nemerle\Net-4.0\Nemerle.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
