починен PreOrderEnumerable, PreOrderDepth, улучшена печать деревьев, работа над флагом ParseDebug, баг в парсере создания состояния, выполненные дела удалены

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,6 @@ endings.bat
 
 /Tests/testsuite/tests/
 
-/Lib/Nemerle.Statechart.Lib.xml
-/Nemerle.Statechart.Analyser/Nemerle.Statechart.Analyser.xml
+/Lib/*.xml
+/Nemerle.Statechart.Analyser/*.xml
+
