небольшие правки проектов

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ endings.bat
 
 /.vs/Nemerle.Statechart/v15/Server/sqlite3/storage.ide-shm
 /.vs/Nemerle.Statechart/v15/Server/sqlite3/storage.ide-wal
+
+/packages/*
