--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ endings.bat
 /.vs/Nemerle.Statechart/v15/Server/sqlite3/storage.ide-wal
 
 /packages/*
+
+/graph/model/*.dll
+/tests/state_machines/*.gxl
