--- a/CommonLib.Macros/packages.config
+++ b/CommonLib.Macros/packages.config
@@ -11,4 +11,10 @@
   <package id="Rx-XAML" version="2.2.5" targetFramework="net45" />
   <package id="Splat" version="1.4.0" targetFramework="net45" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
 </packages>
