починена история, sub_regions, regions расчеты доделаны, InitialConfig

--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,133 @@ endings.bat
 /packages/*
 
 /graph/model/*.dll
-*.grs
 
 /graph/model/*.cs
 
 /graph/model/console.out
+
+
+/ModelTree/*.grs
+/Nemerle.Statechart.Analyser/*.grs
+/Nemerle.Statechart.Analyser/Calculator.grs
+/Nemerle.Statechart.Analyser/Car.grs
+/Nemerle.Statechart.Analyser/CodePad.grs
+/Nemerle.Statechart.Analyser/do_activity_and_completion_transitions.grs
+/Nemerle.Statechart.Analyser/enter_operand.grs
+/Nemerle.Statechart.Analyser/FastKeystroke.grs
+/Nemerle.Statechart.Analyser/FileFsm.grs
+/Nemerle.Statechart.Analyser/hypothetical_example.grs
+/Nemerle.Statechart.Analyser/PathCoverFsm.grs
+/Nemerle.Statechart.Analyser/SaveChecking.grs
+/Nemerle.Statechart.Analyser/Telephone.grs
+/Nemerle.Statechart.Generator/do_activity_and_completion_transitions.grs
+/Nemerle.Statechart.Generator/graphAlarmClock.grs
+/Nemerle.Statechart.Generator/graphCalculator.grs
+/Nemerle.Statechart.Generator/graphCar.grs
+/Nemerle.Statechart.Generator/graphCodePad.grs
+/Nemerle.Statechart.Generator/graphdo_activity_and_completion_transitions.grs
+/Nemerle.Statechart.Generator/graphenter_operand.grs
+/Nemerle.Statechart.Generator/graphFastKeystroke.grs
+/Nemerle.Statechart.Generator/graphFileFsm.grs
+/Nemerle.Statechart.Generator/graphhypothetical_example.grs
+/Nemerle.Statechart.Generator/graphPathCoverFsm.grs
+/Nemerle.Statechart.Generator/graphSaveChecking.grs
+/Nemerle.Statechart.Generator/graphTelephone.grs
+/Nemerle.Statechart.Parser2/AlarmClock.grs
+/Nemerle.Statechart.Parser2/Calculator.grs
+/Nemerle.Statechart.Parser2/Car.grs
+/Nemerle.Statechart.Parser2/CodePad.grs
+/Nemerle.Statechart.Parser2/do_activity_and_completion_transitions.grs
+/Nemerle.Statechart.Parser2/enter_operand.grs
+/Nemerle.Statechart.Parser2/FastKeystroke.grs
+/Nemerle.Statechart.Parser2/FileFsm.grs
+/Nemerle.Statechart.Parser2/hypothetical_example.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/AlarmClock.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/Calculator.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/Car.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/CodePad.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/enter_operand.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/FastKeystroke.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/FileFsm.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphAlarmClock.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphCalculator.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphCar.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphCodePad.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphenter_operand.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphFastKeystroke.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphFileFsm.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphhypothetical_example.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphPathCoverFsm.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphSaveChecking.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/graphTelephone.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/hypothetical_example.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/PathCoverFsm.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/SaveChecking.grs
+/Nemerle.Statechart.Parser2/Nemerle.Statechart.Parser2/Telephone.grs
+/Nemerle.Statechart.Parser2/PathCoverFsm.grs
+/Nemerle.Statechart.Parser2/SaveChecking.grs
+/Nemerle.Statechart.Parser2/Telephone.grs
+/Nemerle.Statechart.Runtime/AlarmClock.grs
+/Nemerle.Statechart.Runtime/Calculator.grs
+/Nemerle.Statechart.Runtime/Car.grs
+/Nemerle.Statechart.Runtime/CodePad.grs
+/Nemerle.Statechart.Runtime/enter_operand.grs
+/Nemerle.Statechart.Runtime/FastKeystroke.grs
+/Nemerle.Statechart.Runtime/FileFsm.grs
+/Nemerle.Statechart.Runtime/graphdo_activity_and_completion_transitions.grs
+/Nemerle.Statechart.Runtime/hypothetical_example.grs
+/Nemerle.Statechart.Runtime/PathCoverFsm.grs
+/Nemerle.Statechart.Runtime/SaveChecking.grs
+/Nemerle.Statechart.Runtime/Telephone.grs
+/OutputTree/AlarmClock.grs
+/OutputTree/Calculator.grs
+/OutputTree/Car.grs
+/OutputTree/CodePad.grs
+/OutputTree/do_activity_and_completion_transitions.grs
+/OutputTree/enter_operand.grs
+/OutputTree/FastKeystroke.grs
+/OutputTree/FileFsm.grs
+/OutputTree/graphAlarmClock.grs
+/OutputTree/graphCalculator.grs
+/OutputTree/graphCar.grs
+/OutputTree/graphCodePad.grs
+/OutputTree/graphenter_operand.grs
+/OutputTree/hypothetical_example.grs
+/OutputTree/PathCoverFsm.grs
+/OutputTree/SaveChecking.grs
+/OutputTree/Telephone.grs
+/Tests/fsmtest/AlarmClock.grs
+/Tests/fsmtest/Calculator.grs
+/Tests/fsmtest/Car.grs
+/Tests/fsmtest/CodePad.grs
+/Tests/fsmtest/do_activity_and_completion_transitions.grs
+/Tests/fsmtest/enter_operand.grs
+/Tests/fsmtest/FastKeystroke.grs
+/Tests/fsmtest/FileFsm.grs
+/Tests/fsmtest/graphAlarmClock.grs
+/Tests/fsmtest/graphCalculator.grs
+/Tests/fsmtest/graphCar.grs
+/Tests/fsmtest/graphCodePad.grs
+/Tests/fsmtest/graphenter_operand.grs
+/Tests/fsmtest/graphFastKeystroke.grs
+/Tests/fsmtest/hypothetical_example.grs
+/Tests/fsmtest/PathCoverFsm.grs
+/Tests/fsmtest/SaveChecking.grs
+/Tests/fsmtest/Telephone.grs
+/Tests/test/AlarmClock.grs
+/Tests/test/Calculator.grs
+/Tests/test/Car.grs
+/Tests/test/CodePad.grs
+/Tests/test/do_activity_and_completion_transitions.grs
+/Tests/test/enter_operand.grs
+/Tests/test/FastKeystroke.grs
+/Tests/test/FileFsm.grs
+/Tests/test/graphdo_activity_and_completion_transitions.grs
+/Tests/test/hypothetical_example.grs
+/Tests/test/PathCoverFsm.grs
+/Tests/test/SaveChecking.grs
+/Tests/test/Telephone.grs
+/graph/model/tmpgrgen0/StateMachineActions_intermediate.cs
+/graph/model/tmpgrgen0/StateMachineModel.cs
+/graph/model/tmpgrgen1/StateMachineActions_intermediate.cs
+/graph/model/tmpgrgen1/StateMachineModel.cs
