--- a/.gitignore
+++ b/.gitignore
@@ -190,3 +190,43 @@ endings.bat
 /graph/model/tmpgrgen0/StateMachineModel.cs
 /graph/model/tmpgrgen1/StateMachineActions_intermediate.cs
 /graph/model/tmpgrgen1/StateMachineModel.cs
+/AlarmClock.grs
+/Calculator.grs
+/Car.grs
+/CodePad.grs
+/enter_operand.grs
+/FastKeystroke.grs
+/FileFsm.grs
+/Fsm.n.orig
+/fsm2graph/do_activity_and_completion_transitions.grs
+/graph/model/AlarmClockConf2.grs
+/graph/model/AlarmClockConf3.grs
+/graph/model/AlarmClockConf4.grs
+/graph/model/do_activity_and_completion_transitions.grs
+/graph/model/enter_operand.grs
+/Nemerle.Statechart.Generator/AlarmClock.grs
+/Nemerle.Statechart.Generator/Calculator.grs
+/Nemerle.Statechart.Generator/Car.grs
+/Nemerle.Statechart.Generator/CodePad.grs
+/Nemerle.Statechart.Generator/enter_operand.grs
+/Nemerle.Statechart.Generator/FastKeystroke.grs
+/Nemerle.Statechart.Generator/FileFsm.grs
+/Nemerle.Statechart.Generator/hypothetical_example.grs
+/Nemerle.Statechart.Generator/PathCoverFsm.grs
+/Nemerle.Statechart.Generator/SaveChecking.grs
+/Nemerle.Statechart.Generator/Telephone.grs
+/PathCoverFsm.grs
+/SaveChecking.grs
+/Telephone.grs
+/Tests/state_machines/AlarmClock.grs
+/Tests/state_machines/Calculator.grs
+/Tests/state_machines/Car.grs
+/Tests/state_machines/CodePad.grs
+/Tests/state_machines/do_activity_and_completion_transitions.grs
+/Tests/state_machines/enter_operand.grs
+/Tests/state_machines/FastKeystroke.grs
+/Tests/state_machines/FileFsm.grs
+/Tests/state_machines/hypothetical_example.grs
+/Tests/state_machines/PathCoverFsm.grs
+/Tests/state_machines/SaveChecking.grs
+/Tests/state_machines/Telephone.grs
