работа над локациями

--- a/Tests/AlarmClock/AlarmClock.csproj
+++ b/Tests/AlarmClock/AlarmClock.csproj
@@ -104,6 +104,10 @@
       <Project>{cae85846-d56a-4c0b-8964-5419513d4a30}</Project>
       <Name>Nemerle.Statechart.Runtime</Name>
     </ProjectReference>
+    <ProjectReference Include="..\state_machines\state_machines.nproj">
+      <Project>{797c8bf4-2021-49c8-8328-dd00a62200b5}</Project>
+      <Name>state_machines</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
