--- a/.gitignore
+++ b/.gitignore
@@ -230,3 +230,10 @@ endings.bat
 /Tests/state_machines/PathCoverFsm.grs
 /Tests/state_machines/SaveChecking.grs
 /Tests/state_machines/Telephone.grs
+/fsm2graph/*.grs
+/graph/model/AlarmClockConf.grs
+/graph/model/AlarmClockConf32.grs
+/graph/model/AlarmClockConf46.grs
+/UpgradeLog.htm
+/UpgradeLog2.htm
+/.vs/Nemerle.Statechart2017/DesignTimeBuild/.dtbcache
